- Fixed a bug which allowed a user to still edit a posts when logging out while in the edit view.
- Fixed a bug where the post view was not shown when when a user logged out while editing.
- Removed left over logDebug calls.

+

- First letter of a post title will now automatically be capitalized.
- Validation to check if the content is not empty when editing a post
- Validation to check if the content is not empty when creating a new post
- Validation to check if the title is not empty when creating a new post

+

- Html tags are now escaped when posts are made or edited, preventing html/script injections.
- Started working on the subject proposal page

+ 

- getPrimarySubjects and getSecondarySubjects moved to the model instead of specific models since there used more then once.
- Proposalpage layout now finished.
- Proposal data will now be send to model when clicking the propose button.

+ 

- Removed isPostDataEmtpy and isPostFormDataEmpty functions since their use was not needed/used properely
- Replaced isPostFormDataEmpty with isLoginDataSet, which is used for both the register and login models.
- Made a function inside the model.php for stopping the code and exiting with a alert. dieWithAlert()
- Replaced individual die and alert with the function dieWithAlert()
- Proposal page now done (not including admin functionality)

+

- Fixed user logging out while on proposal page still granting them access to proposals.
- Admins can now delete or edit anyones post.
- isUserLoggedIn function moved from generalFunctions to model class.
- Fixed a massive bug where comma's couldnt be put in any input due to them being used as a seperator.
- Started working on the admin panels for accepting/denying subject proposals.

+

- Add and collapse buttons now show a pointer cursor when hovered
- Admins can now approve and reject suggested subjects

+ 

- Quotes no longer break the whole proposal admin panels when put in proposals.
- 