@@ -25,7 +25,7 @@ class ContentView extends View
 			$secondarySubjectsRowView = $this->getSecondarySubjectsRowView($secondarySubjectsArr, $primarySubject);
 
 			// Getting the subjectContainer view for the current subject.
-			$subjectView = $this->getSubjectView($primarySubject, $secondarySubjectsRowView);
+			$subjectView = $this->getSubjectView($primarySubject, $secondarySubjectsRowView, $i);
 
 			// Adding the current subjectContainer to the view
 			$view .= $subjectView;
@@ -34,19 +34,29 @@ class ContentView extends View
 		return $view;
 	}
 
-	private function getSubjectView($primarySubject, $secondarySubjectsRowView) 
+	/**
+	 * Makes amd returns the view for 1 specific primary subject
+	 * 
+	 * @param string $primarySubject
+	 * @param string $secondarySubjectRowView
+	 * @param int $idNum
+	 * @return string $view
+	 */
+	private function getSubjectView(string $primarySubject, string $secondarySubjectsRowView, int $idNum) : string
 	{
+		$escapedPrimSub = htmlspecialchars($primarySubject, ENT_QUOTES);
+
 		// Making the subject view (current primarysubject with all its secondarysubject)
 		$view = 
-		"<div class='subjectContainer subjectContainer" . $primarySubject . "' >
+		"<div class='subjectContainer subjectContainer" . $idNum . "' >
 		<table>
 			<tr class='subjectContainerHeaderRow'>
 				<td>
 					<p class='subjectContainerHeaderTitle'>
-						<a onclick='callController(\".content\", \"primarySubjectController\", \"" . $primarySubject . "\")'><i class='fas fa-book'></i> " . $primarySubject . "</a>
+						<a onclick='callController(\".content\", \"primarySubjectController\", \"" . $escapedPrimSub . "\")'><i class='fas fa-book'></i> " . $primarySubject . "</a>
 					</p>
 					<div class='SCHeaderRowSingleButton'>
-					<button class='imageButton SCHeaderRowButton' onClick='collapseSubject(\".subjectContainer" . $primarySubject . "\");'>
+					<button class='imageButton SCHeaderRowButton' onClick='collapseSubject(\".subjectContainer" . $idNum . "\");'>
 						<img class='SCHeaderRowButtonImg' src='../IMG/collapse.png'>
 					</button>
 					</div>
@@ -59,7 +69,14 @@ class ContentView extends View
 		return $view;
 	}
 
-	private function getSecondarySubjectsRowView($secondarySubjectsArr, $primarySubject) 
+	/**
+	 * Takes a array of secondary subjects and returns a array containing all the secondary subjects in a view.
+	 * 
+	 * @param array $secondarySubjectArr
+	 * @param string $primarySubject
+	 * @return string $view
+	 */
+	private function getSecondarySubjectsRowView(array $secondarySubjectsArr, string $primarySubject) : string
 	{
 		$view = "";
 		
@@ -73,11 +90,20 @@ class ContentView extends View
 		return $view;
 	}
 
-	private function getSecondarySubjectRowView($secondarySubject, $primarySubject) 
+	/**
+	 * Gets and and returns the view for 1 specific secondary subject. 
+	 * @param string $secondarySubject
+	 * @param string $primarySubject
+	 * @return string $view
+	 */
+	private function getSecondarySubjectRowView(string $secondarySubject, string $primarySubject) : string 
 	{
+		$dataArg = $primarySubject . "|" . $secondarySubject;
+		$dataArg = htmlspecialchars($dataArg, ENT_QUOTES | ENT_HTML5, 'UTF-8');
+
 		$view = 
 		"<tr class='subjectContainerSubRow'><td class='subjectContainerSubRowTD'>
-				<p class='subjectContainerSubTitle'><a onclick='callController(\".content\", \"secondarySubjectController\", \"" . $primarySubject . "|" . $secondarySubject . "\")'> " . $secondarySubject . "</a></p>
+				<p class='subjectContainerSubTitle'><a onClick='callController(\".content\", \"secondarySubjectController\", \"" . $dataArg . "\");'> " . $secondarySubject . "</a></p>
 			</td>
 		</tr>";
 
